--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "express-validator": "^5.3.0",
+    "geojson": "^0.5.0",
     "http-errors": "^1.8.0",
     "install": "^0.13.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "neo4j-driver": "^4.2.1",
-    "npm": "^6.14.9"
+    "npm": "^6.14.9",
+    "request": "^2.88.2"
   },
   "devDependencies": {},
   "scripts": {
