--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "express-validator": "^5.3.0",
     "geojson": "^0.5.0",
     "http-errors": "^1.8.0",
+    "https": "^1.0.0",
     "install": "^0.13.0",
+    "mapbox-gl": "^2.0.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "navigator": "^1.0.1",
     "neo4j-driver": "^4.2.1",
     "npm": "^6.14.9",
     "request": "^2.88.2"
